--- a/A-InventarioFondoedit/package.json
+++ b/A-InventarioFondoedit/package.json
@@ -25,6 +25,7 @@
     "jquery": "^3.3.1",
     "ng-notify": "^0.7.1",
     "ng-snotify": "^4.3.1",
+    "ngx-bootstrap": "^3.0.1",
     "popper.js": "^1.14.4",
     "rxjs": "^6.0.0",
     "zone.js": "~0.8.26"
