--- a/A-InventarioFondoedit/angular.json
+++ b/A-InventarioFondoedit/angular.json
@@ -28,7 +28,8 @@
               "node_modules/ng-snotify/styles/material.css"
             ],
             "scripts": [
-
+              "node_modules/jspdf/dist/jspdf.min.js",
+              "node_modules/jspdf-autotable/dist/jspdf.plugin.autotable.js",
               "node_modules/popper.js/dist/popper.min.js",
               "node_modules/jquery/dist/jquery.slim.min.js",
               "node_modules/bootstrap/dist/js/bootstrap.min.js"
