--- a/A-InventarioFondoedit/package.json
+++ b/A-InventarioFondoedit/package.json
@@ -25,6 +25,8 @@
     "bootstrap": "^4.1.3",
     "core-js": "^2.5.4",
     "jquery": "^3.3.1",
+    "jspdf": "^1.4.1",
+    "jspdf-autotable": "^2.3.5",
     "ng-notify": "^0.7.1",
     "ng-snotify": "^4.3.1",
     "ngx-bootstrap": "^3.0.1",
