--- a/A-InventarioFondoedit/package.json
+++ b/A-InventarioFondoedit/package.json
@@ -24,6 +24,7 @@
     "@angular/router": "^6.1.10",
     "bootstrap": "^4.1.3",
     "core-js": "^2.5.4",
+    "hammerjs": "^2.0.8",
     "jquery": "^3.3.1",
     "jspdf": "^1.4.1",
     "jspdf-autotable": "^2.3.5",
